--- a/css/style.css
+++ b/css/style.css
@@ -1333,6 +1333,7 @@ body._touch .menu__list > li._active .menu__sub-list {
   transform: translate(-50%, -50%);
   max-width: 500px;
   background-color: rgb(0, 0, 0);
+  box-shadow: 0px 0px 5px white;
   color: #ffffff;
   display: flex;
   align-items: center;
@@ -1378,7 +1379,7 @@ body._touch .menu__list > li._active .menu__sub-list {
   padding: 5px 10px;
   background: none;
   color: white;
-  border: 1px solid white;
+  box-shadow: 0px 0px 5px white;
   letter-spacing: 1px;
   transition: all 0.3s ease-in;
   border-radius: 5px;
